[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = ""
authors = ["Shyngys Zhakelov <zhakelov.shyngys@gmail.com>"]
readme = "README.md"
packages = [
  { include = "gendiff" },
]

[tool.poetry.dependencies]
python = "^3.7"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.poetry.scripts]
gendiff = "gendiff.scripts.gendiff:main"
